# enigmatic

./: Cargo.toml  README.md
src/: main.rs
src/cli/: cli.rs  cli_command.rs  mod.rs
src/domain/: mod.rs
src/domain/entries/: entry_model.rs  entry_service.rs  mod.rs
src/domain/passwords/: ensure_password.rs  mod.rs
src/domain/secrets/: generator.rs  mod.rs
src/storage/: mod.rs
src/storage/entries/: entry_operation_dto.rs  mod.rs
src/storage/registries/: mod.rs  registry_header.rs  registry_repository.rs
