[package]
name = "enigmatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha3 = "0.10.6"
simplecrypt = "1.0.2"
ecies = "0.2.3"
home = "0.5.4"
whoami = "1.3.0"
rpassword = "7.2.0"
clipboard = "0.5.0"