[package]
name = "enigmatic"
version = "0.1.0"
edition = "2021"
description = "Secrets management cli"
license-file = "LICENCE.md"
repository = "https://github.com/Wertual08/enigmatic/tree/master"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.4", features = ["derive"]}
rand = "0.8.5"
rand_core = {version = "0.6.4", features = ["getrandom"]}
sha3 = "0.10.8"
simplecrypt = "1.0.2"
ecies = {version = "0.2.6", default-features = false, features = ["std", "pure"]}
home = "0.5.5"
whoami = "1.4.1"
rpassword = "7.2.0"
clipboard = "0.5.0"
